# platekinematics

./: .gitignore  README.md  README.txt  __init__.py  pyproject.toml  setup.py
.github/workflows/: wheels-windows.yml
platekinematics/: __init__.py  pk_structs.cp38-win_amd64.pyd  spherical_functions.cp314-win_amd64.pyd  spherical_functions.cp38-win_amd64.pyd
platekinematics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: average_ensemble.c  average_ensemble.h  average_eulervec.c  average_eulervec.h  average_finrot.c  average_finrot.h  average_vector.c  build_ensemble.c  build_ensemble.h  ensemble_methods.h  gsl.h  maths.c  parse_array.c  parse_array.h  parse_number.c  pk_structs.c  pk_structs.h  platekinematics.c  platekinematics.h  spherical_functions.c  spherical_functions.h  surface_velocity.c  test_FRs.py
src/type_conversions/: covariance_conversions.c  finrot_conversions.c  type_conversions.h
src/type_methods/: covariance_methods.c  covariance_methods.h  eulervec_methods.c  eulervec_methods.h  finrot_methods.c  type_methods.h
src/types/: covariance.c  covariance.h  euler_vector.h  eulervec.c  eulervec.h  finite_rotation.h  finrot.c  finrot.h  myobject.c  myobject.h  stat.c  stat.h  surfacevelocity.c  surfacevelocity.h  vector3d.h
