[build-system]
requires = [
  "setuptools>=68",
  "wheel",
  "numpy>=2.0"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = ["cp313-win_amd64", "cp314-win_amd64"]
skip = "*-win32"

[tool.cibuildwheel.windows]
before-build = "python -m pip install -U pip numpy delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel} --add-path %VCPKG_INSTALLATION_ROOT%\\installed\\x64-windows\\bin"
environment = { PK_GSL_LIB_DIR = "%VCPKG_INSTALLATION_ROOT%\\installed\\x64-windows\\lib" }
